--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:text": "textlint articles/* books/*"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,12 @@
     "url": "https://github.com/progfay/zenn/issues"
   },
   "homepage": "https://github.com/progfay/zenn#readme",
-  "devDependencies": {},
+  "devDependencies": {
+    "textlint": "^11.7.6",
+    "textlint-rule-preset-ja-spacing": "^2.0.2",
+    "textlint-rule-preset-ja-technical-writing": "^4.0.1",
+    "textlint-rule-spellcheck-tech-word": "^5.0.0"
+  },
   "dependencies": {
     "zenn-cli": "^0.1.34"
   }
