--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint:text": "textlint articles/* books/*"
+    "lint:text": "textlint articles/* books/*",
+		"lint:md": "markdownlint articles books"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/progfay/zenn#readme",
   "devDependencies": {
+    "markdownlint-cli": "^0.23.2",
     "textlint": "^11.7.6",
     "textlint-rule-preset-ja-spacing": "^2.0.2",
     "textlint-rule-preset-ja-technical-writing": "^4.0.1",
