--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint:text": "textlint articles/* books/*",
-		"lint:md": "markdownlint articles books"
+    "lint": "run-s lint:*",
+    "lint:text": "textlint articles books",
+    "lint:md": "markdownlint articles books"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   "homepage": "https://github.com/progfay/zenn#readme",
   "devDependencies": {
     "markdownlint-cli": "^0.23.2",
+    "npm-run-all": "^4.1.5",
     "textlint": "^11.7.6",
     "textlint-rule-preset-ja-spacing": "^2.0.2",
     "textlint-rule-preset-ja-technical-writing": "^4.0.1",
