--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "markdownlint-cli": "^0.23.2",
     "npm-run-all": "^4.1.5",
     "textlint": "^11.7.6",
+    "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-preset-ja-spacing": "^2.0.2",
     "textlint-rule-preset-ja-technical-writing": "^4.0.1",
     "textlint-rule-spellcheck-tech-word": "^5.0.0"
