--- a/.textlintrc
+++ b/.textlintrc
@@ -5,6 +5,8 @@
   "rules": {
     "preset-ja-spacing": true,
     "preset-ja-technical-writing": true,
-    "spellcheck-tech-word": true
+    "spellcheck-tech-word": true,
+    "ja-technical-writing/sentence-length": false,
+    "ja-technical-writing/ja-no-mixed-period": false
   }
 }
