--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "run-s lint:*",
-    "lint:text": "textlint articles books",
     "lint:md": "markdownlint articles books"
   },
   "repository": {
@@ -23,13 +22,7 @@
   },
   "homepage": "https://github.com/progfay/zenn#readme",
   "devDependencies": {
-    "markdownlint-cli": "^0.26.0",
-    "npm-run-all": "^4.1.5",
-    "textlint": "^11.7.7",
-    "textlint-filter-rule-comments": "^1.2.2",
-    "textlint-rule-preset-ja-spacing": "^2.0.2",
-    "textlint-rule-preset-ja-technical-writing": "^4.0.1",
-    "textlint-rule-spellcheck-tech-word": "^5.0.0"
+    "markdownlint-cli": "^0.26.0"
   },
   "dependencies": {
     "zenn-cli": "^0.1.66"
